--- a/orders/package.json
+++ b/orders/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aqibtickets/common": "^1.0.9",
+    "@aqibtickets/common": "^1.0.16",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -28,6 +28,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
@@ -35,7 +36,7 @@
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^9.4.0",
+    "mongodb-memory-server": "^9.4.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.5"
   }
