--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -10,7 +10,6 @@ spec:
     - host: ticketing.dev
       http:
         paths:
-
           - path: /api/orders/?(.*)
             pathType: ImplementationSpecific
             backend:
@@ -32,6 +31,13 @@ spec:
                 name: tickets-srv
                 port:
                   number: 3000
+          - path: /api/payments/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: payments-srv
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: ImplementationSpecific
             backend:
@@ -39,5 +45,3 @@ spec:
                 name: client-srv
                 port:
                   number: 3000
-          
-                  
